crates/pg_syntax/tests/snapshots/postgres_regress/async@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_notify('notify_async1',NULL);"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..16 "pg_notify"
      Ascii40@16..17 "("
      AConst@17..32
        Sconst@17..32 "'notify_async1'"
      Ascii44@32..33 ","
      AConst@33..37
        NullP@33..37 "NULL"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

