crates/pg_syntax/tests/snapshots/postgres_regress/async@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_notify(NULL,'sample message1');"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..16 "pg_notify"
      Ascii40@16..17 "("
      AConst@17..21
        NullP@17..21 "NULL"
      Ascii44@21..22 ","
      AConst@22..39
        Sconst@22..39 "'sample message1'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

