crates/pg_syntax/tests/snapshots/postgres_regress/bitmapops@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO bmscantest\n  SELECT (r%53), (r%59), 'foooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo'\n  FROM generate_series(1,70000) r;"
---
InsertStmt@0..192
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "bmscantest"
  Newline@22..23 "\n"
  Whitespace@23..25 "  "
  SelectStmt@25..191
    Select@25..31 "SELECT"
    Whitespace@31..32 " "
    ResTarget@32..37
      Ascii40@32..33 "("
      AExpr@33..37
        ColumnRef@33..34
          Ident@33..34 "r"
        Ascii37@34..35 "%"
        AConst@35..37
          Iconst@35..37 "53"
    Ascii41@37..38 ")"
    Ascii44@38..39 ","
    Whitespace@39..40 " "
    ResTarget@40..45
      Ascii40@40..41 "("
      AExpr@41..45
        ColumnRef@41..42
          Ident@41..42 "r"
        Ascii37@42..43 "%"
        AConst@43..45
          Iconst@43..45 "59"
    Ascii41@45..46 ")"
    Ascii44@46..47 ","
    Whitespace@47..48 " "
    ResTarget@48..157
      AConst@48..157
        Sconst@48..157 "'fooooooooooooooooooo ..."
    Newline@157..158 "\n"
    Whitespace@158..160 "  "
    From@160..164 "FROM"
    Whitespace@164..165 " "
    RangeFunction@165..191
      List@165..188
        FuncCall@165..188
          Ident@165..180 "generate_series"
          Ascii40@180..181 "("
          AConst@181..182
            Iconst@181..182 "1"
          Ascii44@182..183 ","
          AConst@183..188
            Iconst@183..188 "70000"
      Ascii41@188..189 ")"
      Whitespace@189..190 " "
      Alias@190..191
        Ident@190..191 "r"
  Ascii59@191..192 ";"

